--- a/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
@@ -278,7 +278,7 @@
     <string name="onboarding.desc_3">மாம்ஸ்ப்ரெஸ்ஸோ டீவி உங்களுக்கு அழகான, ஊக்கமளிக்கும், பயனுள்ள மற்றும் வேடிக்கையான வீடியோக்களை வழங்குகிறது. எல்லாம் ஒரே இடத்தில்.</string>
     <string name="onboarding.desc_4">எங்கள் அன்னையர் சமூகத்தின் சக்தியில் சேரவும். உங்கள் கேள்விகளைப் பகிர்ந்து கொள்ளவும். மற்றவர்களுக்கு உதவவும்</string>
 
-    <string name="onboarding_desc_array.tutorial_1.blogs">BLOGS</string>
+    <string name="onboarding_desc_array.tutorial_1.blogs">பதிவுகள்</string>
     <string name="onboarding_desc_array.tutorial_1.videos">MOMVLOGS</string>
     <string name="onboarding_desc_array.tutorial_2.english">ENGLISH</string>
     <string name="onboarding_desc_array.tutorial_2.hindi">HINDI</string>
@@ -295,7 +295,7 @@
 
     <string name="onboarding.signin">SIGN IN</string>
     <string name="onboarding.already_member">Already a member?</string>
-    <string name="onboarding.get_started">GET STARTED</string>
+    <string name="onboarding.get_started">தொடங்கு</string>
     <string name="sign_in.welcome_back">WELCOME BACK</string>
     <string name="sign_in.desc">Discover the joy of motherhood.\n Join our Mum community to find inspiration &amp; hope.</string>
     <string name="sign_in.no_account">Don\'t have an account?\u0020</string>
@@ -315,9 +315,11 @@
     <string name="signin.login_via_facebook">LOGIN USING FACEBOOK</string>
     <string name="signin.login_via_google">LOGIN USING GOOGLE</string>
     <string name="signin.login_via_email">LOGIN USING EMAIL</string>
+    <string name="signin.login_via_phone">LOGIN USING PHONE</string>
 
     <string name="signup.connect_via_facebook">CONNECT USING FACEBOOK</string>
     <string name="signup.connect_via_google">CONNECT USING GOOGLE</string>
+    <string name="signup.connect_via_phone">CONNECT USING PHONE</string>
 
     <string name="for_you.reason.why_label">Why am I seeing this?</string>
     <string name="for_you.reason.dont_want_to_see">Don\'t want to see this</string>
@@ -327,7 +329,7 @@
 
     <string name="lang_setting.stories_label">Stories</string>
 
-    <string name="search.article_label">ARTICLE</string>
+    <string name="search.article_label">கட்டுரை</string>
     <string name="search.author_label">AUTHOR</string>
     <string name="search.topic_label">TOPIC</string>
     <string name="search.show_more">SHOW MORE</string>
@@ -347,8 +349,8 @@
 
     <string name="myprofile.following_label">FOLLOWING</string>
     <string name="myprofile.followers_label">FOLLOWERS</string>
-    <string name="myprofile.section.articles_label">ARTICLES</string>
-    <string name="myprofile.section.short_story_label">100 WORD STORY</string>
+    <string name="myprofile.section.articles_label">கட்டுரை</string>
+    <string name="myprofile.section.short_story_label">100 வார்த்தை கதை</string>
     <string name="myprofile.section.videos_label">MOM VLOGS</string>
     <string name="myprofile.section.activity_label">ACTIVITY</string>
     <string name="myprofile.section.myranking_label">MY RANKING</string>
@@ -368,7 +370,7 @@
     <string name="blogger_profile.top_3_article">TOP 3 ARTICLES</string>
     <string name="blogger_profile.rank_label">RANK</string>
 
-    <string name="user_article.toolbar.title">ARTICLES</string>
+    <string name="user_article.toolbar.title">கட்டுரை</string>
     <string name="user_article.tabbar.published_label">PUBLISHED</string>
     <string name="user_article.tabbar.draft_label">DRAFTS</string>
     <string name="user_article.draft.saved_on">Saved on</string>
@@ -484,7 +486,7 @@
     <string name="add_article_or_video.suggested_topic">SUGGESTED TOPICS</string>
     <string name="add_article_or_video.become_blogger">BECOME A BLOGGER</string>
 
-    <string name="become_blogger.get_started">LET\'S GET STARTED</string>
+    <string name="become_blogger.get_started">தொடங்கு</string>
     <string-array name="become_blogger_title_array">
         <item>BECOME A BLOGGER</item>
         <item>HOW CAN YOU CONTRIBUTE?</item>
@@ -498,10 +500,10 @@
         <item>Whether your story is about parenthood, womanhood, relationships, struggles, joys or personal well-being, this is the platform to write about it. Join the 5000+ Mums in seeking &amp; sharing advice, opinions and recommendations.\n Do refrain from publishing copied or \'slightly modified\' content.</item>
     </string-array>
 
-    <string name="upload_video.title">SHARE A MomVlog\n THAT CAPTURES #MOMLIFE</string>
-    <string name="upload_video.desc">Parenting, Work, Relationships, Fitness, Recipes, Beauty&#8230; basically anything Inspiring from day to day life.</string>
-    <string name="upload_video.desc1">Shoot the video and upload it right away from your Mobile.</string>
-    <string name="upload_video.get_started">LET\'S START</string>
+    <string name="upload_video.title">மாம்வ்ளாக் பகிர்\n #தாயின்வாழ்க்கையை பிடிக்கிறது</string>
+    <string name="upload_video.desc">குழந்தை வளர்ப்பு, வேலை, உறவுகள், உடற்தகுதி, சமையல், அழகு</string>
+    <string name="upload_video.desc1">வீடியோ பிடித்து மொபைலில் இருந்து உடனடியாக அப்லோட் செய்</string>
+    <string name="upload_video.get_started">ஆரம்பிக்கலாம்</string>
 
     <string name="moderation_or_share.way_to_go">WAY TO GO!</string>
     <string name="moderation_or_share.moderation_message">Your article is up for moderation. You\'ll receive an email within 24 hours regarding the status of the blog</string>
@@ -622,7 +624,7 @@
     <string name="article_listing.type.editor_label">EDITOR\'S PICK</string>
     <string name="article_listing.type.todays_best_label">TODAY\'S BEST</string>
     <string name="article_listing.type.for_you_label">FOR YOU</string>
-    <string name="article_listing.type.short_story_label">#100WORDSTORY</string>
+    <string name="article_listing.type.short_story_label">100 வார்த்தை கதை</string>
     <string name="article_listing.type.languages_label">LANGUAGES</string>
     <string name="article_listing.type.videos_label">VIDEOS</string>
     <string name="article_listing.type.recent_label">RECENT</string>
@@ -746,7 +748,7 @@
     <string name="groups.sections.discussions">விவாதம்</string>
     <string name="groups.sections.blogs">BLOGS</string>
     <string name="groups.sections.photos">படங்கள்</string>
-    <string name="groups.sections.videos">VIDEOS</string>
+    <string name="groups.sections.videos">வீடியோ</string>
     <string name="groups.sections.top_posts">TOP POSTS</string>
     <string name="groups.sections.polls">வாக்கெடுப்பு</string>
     <string name="groups.search_in">Search</string>
@@ -792,16 +794,23 @@
     <string name="report.spam">It hurts religious sentiments</string>
     <string name="report.not_relevant">Any other</string>
     <string name="reply">Reply</string>
+
+    <string name="read_more">Read More</string>
+    <string name="read_less">Read Less</string>
+    <string name="profile_completion">Profile Completion</string>
+    <string name="update">UPDATE</string>
+    <string name="improve_reachability">Improve the reachability by updating the bio.</string>
     <string name="choose_account">Choose an account to continue</string>
     <string name="write_about_yourself">Write about yourself</string>
     <string name="child_details">Child Details</string>
     <string name="add_child_details">Add Child Details</string>
-
     <string name="contact_details">Contact Details</string>
+
+    <string name="navigation_bar.home">ஹோம்</string>
     <string name="navigation_bar.discover">கண்டுபிடி</string>
-    <string name="navigation_bar.create">Create</string>
-    <string name="navigation_bar.notifications">Notifications</string>
-    <string name="navigation_bar.groups">Groups</string>
+    <string name="navigation_bar.create">உருவாக்க</string>
+    <string name="navigation_bar.notifications">அறிவிப்புகள்</string>
+    <string name="navigation_bar.groups">குழுக்கள்</string>
 
     <string name="coachmark.home">ஹோம் ஐகான் : மாம்ஸ்ப்ரெஸ்ஸோவிற்கு வரவேற்கிறோம்! நீங்கள் விரும்பிய மொழியில் இந்த ஆப்பை ஆராயலாம்.</string>
     <string name="coachmark.explore">ஆராயும் ஐகான்: இன்று என்ன செய்ய வேண்டும்? 100 வார்த்தை கதை படிக்கவும் அல்லது வீடியோக்களை பார்க்கவும். நீங்கள் பல்வேறு வகைகளையும் ஆராயலாம் மற்றும் ப்ளாக்களை படிக்கலாம்</string>
@@ -812,4 +821,13 @@
     <string name="coachmark.app_setting">ஆப் அமைப்புகள்: உங்கள் ஆப்பின் விருப்பத்தேர்வுகள் மற்றும் மொழி விருப்பங்களை ஒரே இடத்தில் திருத்தலாம். அறிவிப்புகளுக்கு, வகைகளுக்கு இங்கே பதிவு செய்யவும்.</string>
     <string name="coachmark.publish">வெளியிடு (சுயவிவரம்): உங்களுடைய வெளியிடப்பட்ட கட்டுரைகள், கதைகள் மற்றும் மாம் வ்ளாக்ஸை ஒரே இடத்தில் பார்க்கலாம்.</string>
     <string name="mobile">MOBILE NO</string>
+    <string name="continue_writing">Continue Writing(Drafts)</string>
+    <string name="app_settings">ஆப் அமைப்புகள்</string>
+    <string name="create_new">Create New</string>
+    <string name="name_optional">NAME (optional)</string>
+    <string name="name">NAME</string>
+    <string name="updated">Updated :</string>
+    <string name="full_name">FULL NAME</string>
+    <string name="email_and_password">EMAIL AND PASSWORD</string>
+    <string name="location">LOCATION</string>
 </resources>
